python-api/k8s/bluegreen/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-api-green # Consider ${COLOR }
spec:
  type: ClusterIP
  selector:
    app: python-api
    version: green # Consider ${COLOR }
  ports:
    - name: http-port
      port: 80
      targetPort: 5000
